--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 	<meta charset="UTF-8">
 	<title>DE SQL</title>
 	<link rel="stylesheet" href="css/style.css">
+	<meta name="theme-color" content="#ff0000">
 	<link href="favicon.ico" rel="shortcut icon" type="image/x-icon">
 </head>
 <body>
